fixed horizontal srollbar showing up, a tag inside navigation divs was overflowing

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
-    width: 100%;
+    width: 100%vh;
     background-color: #151718;
     color: white;
 }
@@ -25,15 +25,14 @@ header div:hover {
 
 header div {
     background-color: #1d1f20;
-    margin: .35em 0;
-    width: 99%;
+    margin: .35em 0em;
 }
 
 header a {
     display: block;
     padding: .5em .4em;
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     text-decoration: none;
     color: white;
 }
@@ -215,8 +214,8 @@ header a {
 #myBtn {
     display: none; /* Hidden by default */
     position: fixed; /* Fixed/sticky position */
-    bottom: 10px; /* Place the button at the bottom of the page */
-    right: 15px; /* Place the button 30px from the right */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 25px; /* Place the button 30px from the right */
     z-index: 99; /* Make sure it does not overlap */
     border: none; /* Remove borders */
     outline: none; /* Remove outline */
